dnl
dnl
dnl configure.in:
dnl
dnl Copyright (c) 2011 Citrix Systems Inc.,
dnl All rights reserved.
dnl
dnl $Id:$
dnl
dnl $Log:$
dnl
dnl
dnl
AC_PREREQ(2.13)
AC_INIT(src/libedid.c)

AC_PROG_CC
AC_SYS_LARGEFILE

AM_PROG_CC_C_O

AC_CONFIG_MACRO_DIR([m4])


LIBEDID_MAJOR_VERSION=`cat $srcdir/version-major`
LIBEDID_MINOR_VERSION=`cat $srcdir/version-minor`
LIBEDID_MICRO_VERSION=`cat $srcdir/version-micro`



LIBEDID_INTERFACE_VERSION_MIN=$LIBEDID_MINOR_VERSION
LIBEDID_INTERFACE_VERSION_MAX=$LIBEDID_MINOR_VERSION
LIBEDID_INTERFACE_REVISION=1

LIBEDID_VERSION=$LIBEDID_MAJOR_VERSION.$LIBEDID_MINOR_VERSION.$LIBEDID_MICRO_VERSION

AC_SUBST(LIBEDID_MAJOR_VERSION)
AC_SUBST(LIBEDID_MINOR_VERSION)
AC_SUBST(LIBEDID_MICRO_VERSION)
AC_SUBST(LIBEDID_VERSION)

AC_SUBST(LIBEDID_INTERFACE_VERSION_MIN)
AC_SUBST(LIBEDID_INTERFACE_VERSION_MAX)
AC_SUBST(LIBEDID_INTERFACE_REVISION)


LT_RELEASE=$LIBEDID_MAJOR_VERSION.$LIBEDID_MINOR_VERSION
LT_CURRENT=$LIBEDID_INTERFACE_VERSION_MAX
LT_REVISION=$LIBEDID_MICRO_VERSION
LT_AGE=`expr $LIBEDID_INTERFACE_VERSION_MAX - $LIBEDID_INTERFACE_VERSION_MIN`

AC_SUBST(LT_RELEASE)
AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

VERSION=$LIBEDID_VERSION
PACKAGE=libedid

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)

AM_PROG_LIBTOOL

AM_CONFIG_HEADER(src/config.h)

AC_CHECK_PROG(MD5SUM,md5sum,md5sum)
AC_CHECK_PROG(GREP,grep,grep)
AC_CHECK_PROG(SED,sed,sed)
AC_PROG_AWK

dnl AC_DEFINE_UNQUOTED(LIBEDID_MAJOR_VERSION, $LIBEDID_MAJOR_VERSION)
dnl AC_DEFINE_UNQUOTED(LIBEDID_MINOR_VERSION, $LIBEDID_MINOR_VERSION)
dnl AC_DEFINE_UNQUOTED(LIBEDID_MICRO_VERSION, $LIBEDID_MICRO_VERSION)

AC_CHECK_HEADERS(fcntl.h malloc.h sys/ioctl.h unistd.h)
AC_CHECK_HEADERS(sys/scsi/impl/uscsi.h scsi/sg.h stdint.h)
AC_CHECK_HEADERS(sys/int_types.h string.h strings.h)
AC_CHECK_HEADERS(dirent.h sys/stat.h)

AC_C_INLINE
AC_C_CONST
AC_HEADER_TIME
AC_STRUCT_TM
AC_CHECK_FUNCS(select strdup strstr)

I2_TM_H=$ac_cv_struct_tm

I2_HAVE_STDINT_H=0
I2_HAVE_SYS_INT_TYPES_H=0
if test "$ac_cv_header_sys_int_types_h" = "yes"; then
	I2_HAVE_SYS_INT_TYPES_H=1
fi
if test "$ac_cv_header_stdint_h" = "yes"; then
	I2_HAVE_STDINT_H=1
fi
I2_HAVE_UNISTD_H=0
if test "$ac_cv_header_unistd_h" = "yes"; then
	I2_HAVE_UNISTD_H=1
fi

AC_SUBST(I2_TM_H)
AC_SUBST(I2_HAVE_STDINT_H)
AC_SUBST(I2_HAVE_SYS_INT_TYPES_H)
AC_SUBST(I2_HAVE_UNISTD_H)



AC_OUTPUT([Makefile 
	src/Makefile 
	src/edid-head.h
	test/Makefile 
	app/Makefile
	libedid.pc.src
	libedid-config.src],[chmod +x libedid-config.src])

